--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="C:\Users\Rooki\OneDrive\Desktop\Developer\Web Development\HTML - Personal Site\images\FlexyBoi-modified.png" alt="Young Biceps"></td>
+      <td><img src="images\FlexyBoi-modified.png" alt="Young Biceps"></td>
       <td>
         <h1>Devin Snell</h1>
         <p><em><b><a
